--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -88,11 +88,7 @@
 
   .mobile-menu__social {
     display: flex;
-  }
-
-  .mobile-menu__social-item:not(:last-child) {
-    border-right: 1px solid rgba(33, 33, 33, 0.2);
-    margin-right: 10px;
+    justify-content: space-between;
   }
 
   .mobile-menu__social-link {
@@ -102,7 +98,10 @@
     line-height: 1.22;
     letter-spacing: 0.02em;
     color: var(--akcent-text-color);
-    margin-right: 10px;
+  }
+
+  .mobile-menu__social-border {
+    border: 1px solid rgba(33, 33, 33, 0.2);
   }
 }
 
