--- a/sass/layout/_work.scss
+++ b/sass/layout/_work.scss
@@ -1,40 +1,49 @@
 /*----------------work----------------*/
-.work {
-  padding-top: 0;
+
+@media screen and (max-width: 1199px) {
+  .work {
+    display: none;
+  }
 }
 
-.work__title {
-  margin-bottom: 50px;
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.17;
-  text-align: center;
-}
+@media screen and (min-width: 1200px) {
+  .work {
+    padding-top: 0;
+  }
 
-.work__list {
-  display: flex;
-}
+  .work__title {
+    margin-bottom: 50px;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.17;
+    text-align: center;
+  }
 
-.work__item:not(:last-child) {
-  margin-right: 30px;
-}
+  .work__list {
+    display: flex;
+  }
 
-.work__item-img {
-  position: relative;
-}
+  .work__item:not(:last-child) {
+    margin-right: 30px;
+  }
 
-.work__text {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 70px;
-  font-weight: 700;
-  line-height: 1.14;
-  text-align: center;
-  text-transform: uppercase;
-  color: var(--main-text-color);
-  background-color: rgba(47, 48, 58, 0.8);
-  padding-top: 27px;
-  padding-bottom: 27px;
+  .work__item-img {
+    position: relative;
+  }
+
+  .work__text {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 70px;
+    font-weight: 700;
+    line-height: 1.14;
+    text-align: center;
+    text-transform: uppercase;
+    color: var(--main-text-color);
+    background-color: rgba(47, 48, 58, 0.8);
+    padding-top: 27px;
+    padding-bottom: 27px;
+  }
 }
