--- a/css/main.css
+++ b/css/main.css
@@ -733,6 +733,7 @@ img {
 @media screen and (max-width: 767px) {
   .specifics__item {
     width: 100%;
+    margin: 0;
   }
   .specifics__title {
     text-align: center;
@@ -807,27 +808,17 @@ img {
 }
 
 .team__title {
-  margin-bottom: 50px;
   font-weight: 700;
-  font-size: 36px;
-  line-height: 42px;
   text-align: center;
 }
 
-.team__list {
-  display: flex;
-  margin-left: -30px;
-}
-
 .team__item {
-  flex-basis: calc((100% - 120px) / 4);
-  margin-left: 30px;
+  margin-bottom: 30px;
 }
 
 .team__description {
   width: 270px;
   padding-top: 30px;
-  padding-bottom: 30px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
   background-color: var(--fone-background-color);
@@ -846,6 +837,51 @@ img {
   line-height: 1.19;
   text-align: center;
   margin-bottom: 16px;
+}
+
+@media screen and (max-width: 1199px) {
+  .team__title {
+    margin-bottom: 30px;
+    font-size: 28px;
+    line-height: 1.18;
+  }
+  .team__description {
+    padding-bottom: 24px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .team__img {
+    width: 100%;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .team__list {
+    flex-wrap: wrap;
+  }
+  .team__description {
+    width: 270px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .team__title {
+    margin-bottom: 50px;
+    font-size: 36px;
+    line-height: 1.17;
+  }
+  .team__list {
+    display: flex;
+    margin-left: -30px;
+  }
+  .team__item {
+    flex-basis: calc((100% - 120px) / 4);
+    margin-left: 30px;
+  }
+  .team__description {
+    padding-bottom: 30px;
+  }
 }
 
 /*----------------clients----------------*/
