--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -4,27 +4,17 @@
 }
 
 .team__title {
-  margin-bottom: 50px;
   font-weight: 700;
-  font-size: 36px;
-  line-height: 42px;
   text-align: center;
 }
 
-.team__list {
-  display: flex;
-  margin-left: -30px;
-}
-
 .team__item {
-  flex-basis: calc((100% - 120px) / 4);
-  margin-left: 30px;
+  margin-bottom: 30px;
 }
 
 .team__description {
   width: 270px;
   padding-top: 30px;
-  padding-bottom: 30px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
@@ -45,3 +35,99 @@
   text-align: center;
   margin-bottom: 16px;
 }
+
+@media screen and (max-width: 1199px) {
+  .team__title {
+    margin-bottom: 30px;
+    font-size: 28px;
+    line-height: 1.18;
+  }
+
+  .team__description {
+    padding-bottom: 24px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .team__img {
+    width: 100%;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .team__list {
+    flex-wrap: wrap;
+  }
+  .team__description {
+    width: 270px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .team__title {
+    margin-bottom: 50px;
+    font-size: 36px;
+    line-height: 1.17;
+  }
+
+  .team__list {
+    display: flex;
+    margin-left: -30px;
+  }
+
+  .team__item {
+    flex-basis: calc((100% - 120px) / 4);
+    margin-left: 30px;
+  }
+
+  .team__description {
+    padding-bottom: 30px;
+  }
+}
+
+// .team {
+//   background-color: var(--second-background-color);
+// }
+
+// .team__title {
+//   margin-bottom: 50px;
+//   font-weight: 700;
+//   font-size: 36px;
+//   line-height: 1.17;
+//   text-align: center;
+// }
+
+// .team__list {
+//   display: flex;
+//   margin-left: -30px;
+// }
+
+// .team__item {
+//   flex-basis: calc((100% - 120px) / 4);
+//   margin-left: 30px;
+// }
+
+// .team__description {
+//   width: 270px;
+//   padding-top: 30px;
+//   padding-bottom: 30px;
+//   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+//     0px 2px 1px rgba(0, 0, 0, 0.2);
+//   border-radius: 0px 0px 4px 4px;
+//   background-color: var(--fone-background-color);
+// }
+
+// .team__list-title {
+//   margin-bottom: 10px;
+//   font-weight: 500;
+//   font-size: 16px;
+//   line-height: 1.19;
+//   text-align: center;
+// }
+
+// .team__list-text {
+//   font-size: 16px;
+//   line-height: 1.19;
+//   text-align: center;
+//   margin-bottom: 16px;
+// }
