--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -8,10 +8,6 @@
   text-align: center;
 }
 
-.team__item {
-  margin-bottom: 30px;
-}
-
 .team__description {
   width: 270px;
   padding-top: 30px;
@@ -37,6 +33,11 @@
 }
 
 @media screen and (max-width: 1199px) {
+  .team {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+
   .team__title {
     margin-bottom: 30px;
     font-size: 28px;
@@ -49,17 +50,38 @@
 }
 
 @media screen and (max-width: 767px) {
+  .team__item:not(:last-child) {
+    margin-bottom: 30px;
+  }
+
   .team__img {
+    width: 100%;
+  }
+
+  .team__description {
     width: 100%;
   }
 }
 
 @media screen and (min-width: 768px) {
   .team__list {
+    display: flex;
     flex-wrap: wrap;
+    margin: -15px;
   }
+
+  .team__item {
+    width: 354px;
+    flex-basis: calc((100% - 4 * 15px) / 2);
+    margin: 15px;
+  }
+
+  .team__img {
+    width: 354px;
+  }
+
   .team__description {
-    width: 270px;
+    width: 354px;
   }
 }
 
@@ -72,15 +94,23 @@
 
   .team__list {
     display: flex;
-    margin-left: -30px;
+    margin-top: 0;
+    margin-bottom: 0;
   }
 
   .team__item {
-    flex-basis: calc((100% - 120px) / 4);
-    margin-left: 30px;
+    flex-basis: calc((100% - 8 * 15px) / 4);
+    margin-left: 15px;
+    margin-top: 0;
+    margin-bottom: 0;
+  }
+
+  .team__img {
+    width: 270px;
   }
 
   .team__description {
+    width: 270px;
     padding-bottom: 30px;
   }
 }
