--- a/css/main.css
+++ b/css/main.css
@@ -1139,8 +1139,27 @@ img {
   margin-left: 10px;
 }
 
+@media screen and (min-width: 768px) {
+  .footer-container {
+    display: flex;
+    align-items: baseline;
+    flex-wrap: wrap;
+  }
+  .footer-form__email-subscribe {
+    display: block;
+    width: 450px;
+    margin-right: auto;
+    margin-left: auto;
+  }
+  .form {
+    margin-right: auto;
+    margin-left: auto;
+  }
+}
+
 @media screen and (max-width: 1199px) {
   .footer-address {
+    margin-left: 60px;
     margin-bottom: 60px;
     text-align: center;
   }
@@ -1171,6 +1190,9 @@ img {
 }
 
 @media screen and (max-width: 767px) {
+  .footer-address {
+    margin-left: auto;
+  }
   .footer-social {
     margin-right: auto;
   }
