--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -130,8 +130,29 @@
   margin-left: 10px;
 }
 
+@media screen and (min-width: 768px) {
+  .footer-container {
+    display: flex;
+    align-items: baseline;
+    flex-wrap: wrap;
+  }
+
+  .footer-form__email-subscribe {
+    display: block;
+    width: 450px;
+    margin-right: auto;
+    margin-left: auto;
+  }
+
+  .form {
+    margin-right: auto;
+    margin-left: auto;
+  }
+}
+
 @media screen and (max-width: 1199px) {
   .footer-address {
+    margin-left: 60px;
     margin-bottom: 60px;
     text-align: center;
   }
@@ -167,6 +188,10 @@
 }
 
 @media screen and (max-width: 767px) {
+  .footer-address {
+    margin-left: auto;
+  }
+
   .footer-social {
     margin-right: auto;
   }
