--- a/css/main.css
+++ b/css/main.css
@@ -1034,10 +1034,6 @@ img {
   color: var(--main-text-color);
 }
 
-.footer-address__link:hover, .footer-address__link:focus {
-  color: var(--akcent-text-color);
-}
-
 .footer-address__link-item {
   font-style: normal;
   font-weight: 400;
@@ -1045,10 +1041,6 @@ img {
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
-}
-
-.footer-address__link-item:hover, .footer-address__link-item:focus {
-  color: var(--akcent-text-color);
 }
 
 .footer-text {
@@ -1083,11 +1075,6 @@ img {
   border-radius: 50%;
   fill: var(--main-text-color);
   background-color: rgba(255, 255, 255, 0.1);
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.footer-social__link:hover, .footer-social__link:focus {
-  background-color: var(--social-akcent-color);
 }
 
 .footer-social__icon {
@@ -1121,13 +1108,6 @@ img {
   letter-spacing: 0.06em;
   color: var(--main-text-color);
   background-color: var(--button-color);
-  cursor: pointer;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.footer-form__btn:hover, .footer-form__btn:focus {
-  background-color: #188ce8;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 
 .form__text-icon-btn {
@@ -1146,7 +1126,6 @@ img {
     flex-wrap: wrap;
   }
   .footer-form__email-subscribe {
-    display: block;
     width: 450px;
     margin-right: auto;
     margin-left: auto;
@@ -1154,6 +1133,42 @@ img {
   .form {
     margin-right: auto;
     margin-left: auto;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer__logo-link {
+    font-size: 26px;
+  }
+  .footer-address {
+    margin-right: 70px;
+  }
+  .footer-address__link:hover, .footer-address__link:focus {
+    color: var(--akcent-text-color);
+  }
+  .footer-address__link-item:hover, .footer-address__link-item:focus {
+    color: var(--akcent-text-color);
+  }
+  .footer-social__link {
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .footer-social__link:hover, .footer-social__link:focus {
+    background-color: var(--social-akcent-color);
+  }
+  .form {
+    margin-right: 0;
+  }
+  .footer-form__email-subscribe {
+    width: 358px;
+    margin-right: 12px;
+  }
+  .footer-form__btn {
+    cursor: pointer;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .footer-form__btn:hover, .footer-form__btn:focus {
+    background-color: #188ce8;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   }
 }
 
