--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -17,11 +17,6 @@
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: var(--main-text-color);
-
-  &:hover,
-  &:focus {
-    color: var(--akcent-text-color);
-  }
 }
 
 .footer-address__link-item {
@@ -31,11 +26,6 @@
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
-
-  &:hover,
-  &:focus {
-    color: var(--akcent-text-color);
-  }
 }
 
 .footer-text {
@@ -70,12 +60,6 @@
   border-radius: 50%;
   fill: var(--main-text-color);
   background-color: rgba(255, 255, 255, 0.1);
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-  &:hover,
-  &:focus {
-    background-color: var(--social-akcent-color);
-  }
 }
 
 .footer-social__icon {
@@ -101,7 +85,6 @@
 .footer-form__btn {
   min-width: 200px;
   height: 50px;
-
   border-radius: 4px;
   border: none;
   font-weight: 700;
@@ -110,15 +93,6 @@
   letter-spacing: 0.06em;
   color: var(--main-text-color);
   background-color: var(--button-color);
-  cursor: pointer;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-  &:hover,
-  &:focus {
-    background-color: #188ce8;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  }
 }
 
 .form__text-icon-btn {
@@ -138,7 +112,6 @@
   }
 
   .footer-form__email-subscribe {
-    display: block;
     width: 450px;
     margin-right: auto;
     margin-left: auto;
@@ -147,6 +120,59 @@
   .form {
     margin-right: auto;
     margin-left: auto;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer__logo-link {
+    font-size: 26px;
+  }
+
+  .footer-address {
+    margin-right: 70px;
+  }
+
+  .footer-address__link {
+    &:hover,
+    &:focus {
+      color: var(--akcent-text-color);
+    }
+  }
+
+  .footer-address__link-item {
+    &:hover,
+    &:focus {
+      color: var(--akcent-text-color);
+    }
+  }
+
+  .footer-social__link {
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    &:hover,
+    &:focus {
+      background-color: var(--social-akcent-color);
+    }
+  }
+
+  .form {
+    margin-right: 0;
+  }
+
+  .footer-form__email-subscribe {
+    width: 358px;
+    margin-right: 12px;
+  }
+
+  .footer-form__btn {
+    cursor: pointer;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+      box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    &:hover,
+    &:focus {
+      background-color: #188ce8;
+      box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    }
   }
 }
 
@@ -296,7 +322,7 @@
 //   justify-content: center;
 // }
 
-// .footer__email-subscribe {
+// .footer-form__email-subscribe {
 //   width: 358px;
 //   height: 50px;
 //   border: 1px solid rgba(255, 255, 255, 0.3);
