--- a/css/main.css
+++ b/css/main.css
@@ -1243,15 +1243,12 @@ img {
 }
 
 /*-----------------------start Portfolio-----------------------*/
-/*------filter------*/
 .filter__list {
   display: flex;
-  justify-content: center;
 }
 
-.filter__item {
+.filter__item:not(:last-child) {
   margin-right: 8px;
-  margin-bottom: 50px;
 }
 
 .filter__button {
@@ -1278,20 +1275,6 @@ img {
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
-/*------projects------*/
-.projects__list {
-  display: flex;
-  flex-wrap: wrap;
-  margin-left: -30px;
-  margin-top: -30px;
-}
-
-.projects__item {
-  flex-basis: calc((100% - 90px) / 3);
-  margin-left: 30px;
-  margin-top: 30px;
-}
-
 .projects__link {
   display: block;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -1313,7 +1296,6 @@ img {
   font-weight: 700;
   font-size: 18px;
   line-height: 2;
-  letter-spacing: 0.06em;
   color: var(--title-text-color);
 }
 
@@ -1352,5 +1334,63 @@ img {
   transform: translate(0);
 }
 
+@media screen and (max-width: 1199px) {
+  .section {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .filter__list {
+    flex-wrap: wrap;
+  }
+  .filter__item {
+    margin-bottom: 15px;
+  }
+  .projects__list {
+    margin-top: 25px;
+  }
+  .projects__item:not(:last-child) {
+    margin-bottom: 30px;
+  }
+  .projects__item-title {
+    letter-spacing: 0.06em;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .filter__list {
+    justify-content: center;
+    margin-bottom: 30px;
+  }
+  .projects__list {
+    display: flex;
+    flex-wrap: wrap;
+    margin: -15px;
+  }
+  .projects__item {
+    width: calc((100% - 4 * 15px) / 2);
+    margin: 15px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .filter__list {
+    margin-bottom: 50px;
+  }
+  .projects__list {
+    margin: -15px;
+  }
+  .projects__item {
+    width: calc((100% - 6 * 15px) / 3);
+    margin: 15px;
+  }
+  .projects__item-title {
+    letter-spacing: 0.06em;
+  }
+}
+
+/*------projects------*/
 /*-----------------------end Portfolio-----------------------*/
 /*# sourceMappingURL=main.css.map */
