--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -1,14 +1,11 @@
 /*-----------------------start Portfolio-----------------------*/
 
-/*------filter------*/
 .filter__list {
   display: flex;
-  justify-content: center;
 }
 
-.filter__item {
+.filter__item:not(:last-child) {
   margin-right: 8px;
-  margin-bottom: 50px;
 }
 
 .filter__button {
@@ -39,20 +36,6 @@
   }
 }
 
-/*------projects------*/
-.projects__list {
-  display: flex;
-  flex-wrap: wrap;
-  margin-left: -30px;
-  margin-top: -30px;
-}
-
-.projects__item {
-  flex-basis: calc((100% - 90px) / 3);
-  margin-left: 30px;
-  margin-top: 30px;
-}
-
 .projects__link {
   display: block;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -76,7 +59,6 @@
   font-weight: 700;
   font-size: 18px;
   line-height: 2;
-  letter-spacing: 0.06em;
   color: var(--title-text-color);
 }
 
@@ -114,5 +96,185 @@
     transform: translate(0);
   }
 }
+
+@media screen and (max-width: 1199px) {
+  .section {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .filter__list {
+    flex-wrap: wrap;
+  }
+
+  .filter__item {
+    margin-bottom: 15px;
+  }
+
+  .projects__list {
+    margin-top: 25px;
+  }
+
+  .projects__item:not(:last-child) {
+    margin-bottom: 30px;
+  }
+
+  .projects__item-title {
+    letter-spacing: 0.06em;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .filter__list {
+    justify-content: center;
+    margin-bottom: 30px;
+  }
+
+  .projects__list {
+    display: flex;
+    flex-wrap: wrap;
+    margin: -15px;
+  }
+
+  .projects__item {
+    width: calc((100% - 4 * 15px) / 2);
+    margin: 15px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .filter__list {
+    margin-bottom: 50px;
+  }
+
+  .projects__list {
+    margin: -15px;
+  }
+
+  .projects__item {
+    width: calc((100% - 6 * 15px) / 3);
+    margin: 15px;
+  }
+
+  .projects__item-title {
+    letter-spacing: 0.06em;
+  }
+}
+
+// .filter__list {
+//   display: flex;
+//   justify-content: center;
+// }
+
+// .filter__item {
+//   margin-right: 8px;
+//   margin-bottom: 50px;
+// }
+
+// .filter__button {
+//   padding-top: 6px;
+//   padding-bottom: 6px;
+//   padding-left: 22px;
+//   padding-right: 22px;
+//   border-radius: 4px;
+//   border: transparent;
+//   font-weight: 500;
+//   font-size: 16px;
+//   line-height: 1.62;
+//   text-align: center;
+//   letter-spacing: 0.03em;
+//   cursor: pointer;
+//   color: var(--title-text-color);
+//   background-color: var(--second-background-color);
+//   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+//     background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+//     box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+//   &:hover,
+//   &:focus {
+//     color: var(--main-text-color);
+//     background-color: var(--button-color);
+//     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+//       0px 2px 2px rgba(0, 0, 0, 0.12);
+//   }
+// }
+
+/*------projects------*/
+// .projects__list {
+//   display: flex;
+//   flex-wrap: wrap;
+//   margin-left: -30px;
+//   margin-top: -30px;
+// }
+
+// .projects__item {
+//   flex-basis: calc((100% - 90px) / 3);
+//   margin-left: 30px;
+//   margin-top: 30px;
+// }
+
+// .projects__link {
+//   display: block;
+//   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+//   &:hover,
+//   &:focus {
+//     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+//       1px 4px 6px rgba(0, 0, 0, 0.16);
+//   }
+// }
+
+// .projects__description {
+//   padding: 20px 24px;
+//   border: 1px solid var(--border-color);
+//   border-top: none;
+// }
+
+// .projects__item-title {
+//   margin-bottom: 4px;
+//   font-style: normal;
+//   font-weight: 700;
+//   font-size: 18px;
+//   line-height: 2;
+//   letter-spacing: 0.06em;
+//   color: var(--title-text-color);
+// }
+
+// .projects__item-text {
+//   font-style: normal;
+//   font-weight: 400;
+//   font-size: 16px;
+//   line-height: 1.88;
+//   letter-spacing: 0.03em;
+//   color: var(--primary-text-color);
+// }
+
+// .projects__link-img {
+//   position: relative;
+//   overflow: hidden;
+// }
+
+// .projects__overlay {
+//   position: absolute;
+//   top: 0;
+//   left: 0;
+//   width: 100%;
+//   height: 100%;
+//   font-size: 18px;
+//   line-height: 1.56;
+//   color: var(--main-text-color);
+//   background-color: rgba(33, 150, 243, 0.9);
+//   padding: 63px 24px;
+//   overflow: auto;
+//   transform: translateY(101%);
+//   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+//   .projects__link:hover &,
+//   .projects__link:focus & {
+//     transform: translate(0);
+//   }
+// }
 
 /*-----------------------end Portfolio-----------------------*/
